--- a/_downloads/5be87f8db0d8a1786f4a85b3e6aa01fa/data_description.ipynb
+++ b/_downloads/5be87f8db0d8a1786f4a85b3e6aa01fa/data_description.ipynb
@@ -69,8 +69,8 @@
    },
    "outputs": [],
    "source": [
-    "aisle = pd.read_csv(\"../../Data/instacart/aisles.csv\")\n",
-    "aisle.to_parquet(\"../../Data/instacart/aisles.parquet\")\n"
+    "aisle = pd.read_csv(\"/home/chase/Dropbox/instacart/aisles.csv\")\n",
+    "aisle.to_parquet(\"/home/chase/Dropbox/instacart/aisles.parquet\")"
    ]
   },
   {
@@ -112,8 +112,8 @@
    },
    "outputs": [],
    "source": [
-    "department = pd.read_csv(\"../../Data/instacart/departments.csv\")\n",
-    "department.to_parquet(\"../../Data/instacart/departments.parquet\")"
+    "department = pd.read_csv(\"/home/chase/Dropbox/instacart/departments.csv\")\n",
+    "department.to_parquet(\"/home/chase/Dropbox/instacart/departments.parquet\")"
    ]
   },
   {
@@ -157,8 +157,8 @@
    },
    "outputs": [],
    "source": [
-    "products = pd.read_csv(\"../../Data/instacart/products.csv\")\n",
-    "products.to_parquet(\"../../Data/instacart/products.parquet\")"
+    "products = pd.read_csv(\"/home/chase/Dropbox/instacart/products.csv\")\n",
+    "products.to_parquet(\"/home/chase/Dropbox/instacart/products.parquet\")"
    ]
   },
   {
@@ -242,8 +242,8 @@
    },
    "outputs": [],
    "source": [
-    "orders = pd.read_csv(\"../../Data/instacart/orders.csv\")\n",
-    "orders.to_parquet(\"../../Data/instacart/orders.parquet\")"
+    "orders = pd.read_csv(\"/home/chase/Dropbox/instacart/orders.csv\")\n",
+    "orders.to_parquet(\"/home/chase/Dropbox/instacart/orders.parquet\")"
    ]
   },
   {
@@ -257,6 +257,24 @@
    "outputs": [],
    "source": [
     "orders.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders[\"user_id\"].unique().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders[\"user_id\"].value_counts().describe()"
    ]
   },
   {
@@ -316,7 +334,7 @@
    },
    "outputs": [],
    "source": [
-    "prior_orders = pd.read_csv(\"../../Data/instacart/order_products__prior.csv\")\n",
+    "prior_orders = pd.read_csv(\"/home/chase/Dropbox/instacart/order_products__prior.csv\")\n",
     "\n",
     "prior_orders.describe()"
    ]
@@ -331,7 +349,7 @@
    },
    "outputs": [],
    "source": [
-    "train_orders = pd.read_csv(\"../../Data/instacart/order_products__train.csv\")\n",
+    "train_orders = pd.read_csv(\"/home/chase/Dropbox/instacart/order_products__train.csv\")\n",
     "\n",
     "train_orders.describe()"
    ]
@@ -347,7 +365,16 @@
    "outputs": [],
    "source": [
     "order_products = pd.concat([prior_orders, train_orders], axis=0, ignore_index=True)\n",
-    "order_products.to_parquet(\"../../Data/instacart/order_products_all.parquet\")\n"
+    "order_products.to_parquet(\"/home/chase/Dropbox/instacart/order_products_all.parquet\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "order_products.head()"
    ]
   },
   {
@@ -401,6 +428,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "order_products.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "order_product_user = order_products.merge(\n",
     "    orders.loc[:, [\"order_id\", \"user_id\", \"order_number\", \"days_since_prior_order\"]],\n",
     "    how=\"left\", on=\"order_id\"\n",
@@ -444,7 +489,7 @@
     ").agg(\n",
     "    {\"add_to_cart_order\": \"count\", \"reordered\": \"sum\"}\n",
     ").query(\n",
-    "    \"reordered > 10\"\n",
+    "    \"reordered > 10\"  # df.query(\"x > 10\") == df.loc[df[\"x\"] > 10, :]\n",
     ").rename(\n",
     "    columns={\"add_to_cart_order\": \"norder\", \"reordered\": \"nreorder\"}\n",
     ").assign(\n",
@@ -452,6 +497,15 @@
     ").sort_values(\n",
     "    \"frac_reorder\", ascending=False\n",
     ").merge(products, on=\"product_id\", how=\"left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mrp.sort_values(\"norder\")"
    ]
   },
   {
