--- a/_downloads/8522b4ac7f8b938672f9b670fe9e6bae/sql.ipynb
+++ b/_downloads/8522b4ac7f8b938672f9b670fe9e6bae/sql.ipynb
@@ -201,7 +201,8 @@
    "outputs": [],
    "source": [
     "# Create a SQL alchemy engine and add table information to the engine\n",
-    "eng = sa.create_engine(\"sqlite:///../../Data/instacart/instacart.db\")\n",
+    "fn = \"/home/chase/Dropbox/instacart/instacart.db\"\n",
+    "eng = sa.create_engine(f\"sqlite:///{fn}\")\n",
     "Base.metadata.create_all(eng)\n",
     "\n",
     "Session = sa.orm.sessionmaker(bind=eng)"
@@ -235,18 +236,18 @@
     "# %%time\n",
     "# # Uncomment if the data needs to be fixed or updated\n",
     "# # Create a SQL alchemy engine and add table information to the engine\n",
-    "# os.remove(\"../../Data/instacart/instacart.db\")\n",
+    "# os.remove(\"/home/chase/Dropbox/instacart/instacart.db\")\n",
     "# Base.metadata.create_all(eng)\n",
     "\n",
     "# Session = sa.orm.sessionmaker(bind=eng)\n",
     "\n",
     "# # Create table -> filename pairs\n",
     "# table_to_file = [\n",
-    "#     (Aisles, \"../../Data/instacart/aisles.parquet\"),\n",
-    "#     (Departments, \"../../Data/instacart/departments.parquet\"),\n",
-    "#     (Products, \"../../Data/instacart/products.parquet\"),\n",
-    "#     (Orders, \"../../Data/instacart/orders.parquet\"),\n",
-    "#     (ProductsOrdered,  \"../../Data/instacart/order_products_all.parquet\"),\n",
+    "#     (Aisles, \"/home/chase/Dropbox/instacart/aisles.parquet\"),\n",
+    "#     (Departments, \"/home/chase/Dropbox/instacart/departments.parquet\"),\n",
+    "#     (Products, \"/home/chase/Dropbox/instacart/products.parquet\"),\n",
+    "#     (Orders, \"/home/chase/Dropbox/instacart/orders.parquet\"),\n",
+    "#     (ProductsOrdered,  \"/home/chase/Dropbox/instacart/order_products_all.parquet\"),\n",
     "# ]\n",
     "\n",
     "# session = Session()\n",
@@ -359,6 +360,15 @@
     "        \"\"\"\n",
     "\n",
     "run_query(eng, query)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eng"
    ]
   },
   {
@@ -1177,13 +1187,6 @@
    "source": [
     "df.head(10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
