--- a/_downloads/5cf98d708547d5299f9957084075c3e4/scraping_examples.ipynb
+++ b/_downloads/5cf98d708547d5299f9957084075c3e4/scraping_examples.ipynb
@@ -4132,14 +4132,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"http://www.africau.edu/images/default/sample.pdf\"\n",
-    "\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "res = requests.get(\n",
-    "    \n",
+    "    \"http://www.africau.edu/images/default/sample.pdf\"\n",
     ")"
    ]
   },
